// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQC-U2o_lmuXxNefEaFU9CRTCSpsZ5hCJX9J0JhAEdCcl3Am"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQAezrEHN2SM19CtUXuQr3qJh0ZpxRwObArJ1RuZKnUNfegK"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQC-U2o_lmuXxNefEaFU9CRTCSpsZ5hCJX9J0JhAEdCcl3Am",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15636n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQC-U2o_lmuXxNefEaFU9CRTCSpsZ5hCJX9J0JhAEdCcl3Am",
            "to": "kQAezrEHN2SM19CtUXuQr3qJh0ZpxRwObArJ1RuZKnUNfegK",
            "type": "internal",
            "value": 9970011000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQC-U2o_lmuXxNefEaFU9CRTCSpsZ5hCJX9J0JhAEdCcl3Am",
          "to": "kQAezrEHN2SM19CtUXuQr3qJh0ZpxRwObArJ1RuZKnUNfegK",
          "type": "internal",
          "value": 9970011000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14377n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQAezrEHN2SM19CtUXuQr3qJh0ZpxRwObArJ1RuZKnUNfegK",
            "to": "kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX",
            "type": "internal",
            "value": 9946184000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQAezrEHN2SM19CtUXuQr3qJh0ZpxRwObArJ1RuZKnUNfegK",
          "to": "kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX",
          "type": "internal",
          "value": 9946184000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14305n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX",
            "to": "kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX",
            "type": "internal",
            "value": 9922617000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX",
          "to": "kQBUDE-TS2jrMFKs6zed70_3N_UASVDzE3Ok2dvXnJLmqViX",
          "type": "internal",
          "value": 9922617000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4585n,
      },
    ],
  },
]
`;
